--- a/_posts/2019-08-23-感恩有你.md
+++ b/_posts/2019-08-23-感恩有你.md
@@ -15,7 +15,7 @@ tags:
 我喜欢你，如鲸鱼向海，似鸟投林。
 ```
 
-<iframe src="http://link.hhtjim.com/163/1359356908.mp3"scrolling="yes"></iframe>
+<iframe src="http://link.hhtjim.com/163/1359356908.mp3"></iframe>
 
 
 盼君归期未有期，巴山夜雨涨秋池。
