--- a/_posts/2019-08-23-感恩有你.md
+++ b/_posts/2019-08-23-感恩有你.md
@@ -15,7 +15,7 @@ tags:
 我喜欢你，如鲸鱼向海，似鸟投林。
 ```
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="100%" height="86" src="//music.163.com/#/song?id=30621618"></iframe>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="100%" height="86" src="http://link.hhtjim.com/163/34341360.mp3"></iframe>
 
 盼君归期未有期，巴山夜雨涨秋池。
 
