--- a/_posts/2019-08-23-感恩有你.md
+++ b/_posts/2019-08-23-感恩有你.md
@@ -33,8 +33,8 @@ tags:
 
 都说能走进生命里的人，皆是有原因的。有人只是想对你好，只是因为你是他心里最在乎、最珍惜的人，从而让你感到被珍爱与呵护的温情；有人是因为你对他好，就还以同等的真诚与关心，因此让你收获到至真至纯的情。你的到来让我收获了温和和柔情，让自己更加柔和。
 
-不像书上写的天秤座外热内冷，你的内心依然热忱，你的支持便是对我最大的鼓励和帮助。
+不像书上写的天秤座外热内冷，你的内心依然热忱，你的支持便是对我最大的鼓励和帮助。你的支持让再一次可以重振信心，让我相信生活不止眼前的苟且，还有诗和远方，还有你。
 
-虽说忙完这阵，就可以忙下一阵了，但是还得保证陪伴你的时间。或者说是有一定的我们在一起的时间。不能被工作的事情把生活全部占据失衡。
+
 
 
